...
				</TextElement>
			</ButtonPrimary>
		);

		return (
			<View className='mt-5 mb-0 flex flex-row justify-between flex-1'>
				{renderTab('community', ThreePeopleIcon, 'feed-community-tab')}
				{renderTab('following', TwoPeopleIcon, 'feed-following-tab')}
				{!hideCreatorTab &&
					renderTab('creator', CreatorIcon, 'feed-creator-tab')}
			</View>
		);
	},
);
...
