...
					/>
				))}
			<TouchableOpacity
				className={'flex-row items-center bg-[#151515] p-1 rounded-lg'}
				activeOpacity={0.5}
				onPress={onPressEmojiPicker}
				testID='emoji-picker-button'
			>
				<EmojiPickerIcon width={20} height={20} />
				<TextElement
					textStyles='text-xs ml-1 text-white'
					testID='emoji-counter-text'
				>
...
