...
					<Image className='w-[25px] h-[25px]' source={InviteFriendsIcon} />
				</TouchableOpacity>
				<TouchableOpacity
					onPress={onPressNotification}
					activeOpacity={0.8}
					hitSlop={5}
					testID='invite-friends-button'
				>
					<NotificationIcon width={25} height={23} hasNotification={hasBadge} />
				</TouchableOpacity>
			</View>
		</Header>
	);
...
