...
					onPress={() => {
						setShowPassword(!showPassword);
					}}
					isReactNodeContent
					designVariation='ghost'
					buttonStyles='absolute right-0 top-0 bottom-0 flex items-center justify-center '
					testID='show-password-button'
				>
					{showPassword ? <EyeIcon /> : <CrossedEyeIcon />}
				</ButtonPrimary>
			);
		}

...
